extensions/docker-registry/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry-ingress
  namespace: docker-registry
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.k3s-cluster.io`)
      kind: Rule
      services:
        - name: registry-service
          kind: Service
          namespace: docker-registry
          port: 5000
  tls:
    secretName: k3s-cluster-tls
